--- a/MNIST PREDICTION.ipynb
+++ b/MNIST PREDICTION.ipynb
@@ -237,7 +237,7 @@
    },
    "source": [
     "*on va utiliser KFold pour subdiviser la base de données en 21 parties:*\n",
-    "Test_Set sera bien sur le 14, indice de notre groupe Aakla/Samouche,  le parametre de kF random_state sera donc 14.\n",
+    "Test_Set sera bien sur le 14, indice de notre groupe,  le parametre de kF random_state sera donc 14.\n",
     " La taile de chaque lot:  **5000//21=238**"
    ]
   },
